--- a/app/src/main/res/layout/include_find_in_page.xml
+++ b/app/src/main/res/layout/include_find_in_page.xml
@@ -20,7 +20,7 @@
     android:id="@+id/findInPageContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/brownishGray"
+    android:background="@color/colorPrimary"
     android:clickable="true"
     tools:ignore="KeyboardInaccessibleWidget"
     tools:layout_height="?attr/actionBarSize">
@@ -33,6 +33,9 @@
         android:layout_marginStart="12dp"
         android:hint="@string/findInPageHint"
         android:imeOptions="flagNoExtractUi"
+        android:background="@color/colorPrimary"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="13sp"
         android:inputType="text"
         android:selectAllOnFocus="true"
         android:textColor="@color/white"
@@ -98,7 +101,7 @@
             android:id="@+id/closeFindInPagePanel"
             android:layout_width="36dp"
             android:layout_height="match_parent"
-            android:contentDescription="@string/previousSearchTermDescription"
+            android:contentDescription="@string/closeFindInPageButtonDescription"
             android:padding="6dp"
             android:src="@drawable/ic_close_white_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
