--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2017 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -117,7 +118,6 @@
 
         </android.support.design.widget.AppBarLayout>
 
-
         <View
             android:id="@+id/focusDummy"
             android:layout_width="match_parent"
@@ -140,6 +140,12 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </android.support.design.widget.CoordinatorLayout>
+
+    <include
+        layout="@layout/include_find_in_page"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:visibility="gone" />
 
     <FrameLayout
         android:id="@+id/webViewFullScreenContainer"
