--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -16,17 +16,19 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
 
     <LinearLayout
         android:id="@+id/header"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:background="@color/white"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
             android:id="@+id/backPopupMenuItem"
@@ -63,38 +65,45 @@
         android:background="@color/white_two"
         app:layout_constraintBottom_toBottomOf="@+id/header" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="20dp"
-        android:paddingTop="13dp"
         app:layout_constraintTop_toBottomOf="@id/header">
 
-        <TextView
-            android:id="@+id/bookmarksPopupMenuItem"
-            style="@style/BrowserTextMenuItem"
-            android:enabled="false"
-            android:text="@string/bookmarksMenuTitle" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="20dp"
+            android:paddingTop="13dp">
 
-        <TextView
-            android:id="@+id/addBookmarksPopupMenuItem"
-            style="@style/BrowserTextMenuItem"
-            android:enabled="false"
-            android:text="@string/addBookmarkMenuTitle" />
+            <TextView
+                android:id="@+id/bookmarksPopupMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:enabled="false"
+                android:text="@string/bookmarksMenuTitle" />
 
-        <TextView
-            android:id="@+id/findInPageMenuItem"
-            style="@style/BrowserTextMenuItem"
-            android:enabled="false"
-            android:text="@string/find_in_page" />
+            <TextView
+                android:id="@+id/addBookmarksPopupMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:enabled="false"
+                android:text="@string/addBookmarkMenuTitle" />
 
-        <TextView
-            android:id="@+id/settingsPopupMenuItem"
-            style="@style/BrowserTextMenuItem"
-            android:enabled="false"
-            android:text="@string/settingsMenuItemTitle" />
+            <TextView
+                android:id="@+id/findInPageMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:enabled="false"
+                android:text="@string/find_in_page" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/settingsPopupMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:enabled="false"
+                android:text="@string/settingsMenuItemTitle" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
