Fix checkbox UI - tweaking paddings and margins

--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -99,8 +99,11 @@
                 android:id="@+id/requestDesktopSiteCheckMenuItem"
                 style="@style/BrowserTextMenuItem"
                 android:button="@null"
+                android:paddingStart="30dp"
+                android:paddingEnd="0dp"
+                android:layout_marginEnd="20dp"
                 android:enabled="false"
-                android:drawablePadding="20dp"
+                android:drawablePadding="30dp"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                 android:text="@string/requestDesktopSiteMenuTitle"
                 android:layout_width="match_parent"
