--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -95,6 +95,20 @@
                 android:enabled="false"
                 android:text="@string/find_in_page" />
 
+            <CheckBox
+                android:id="@+id/requestDesktopSiteCheckMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:button="@null"
+                android:paddingStart="30dp"
+                android:paddingEnd="0dp"
+                android:layout_marginEnd="20dp"
+                android:enabled="false"
+                android:drawablePadding="30dp"
+                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
+                android:text="@string/requestDesktopSiteMenuTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <TextView
                 android:id="@+id/settingsPopupMenuItem"
                 style="@style/BrowserTextMenuItem"
