Implement URL sharing from current page

--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -90,6 +90,12 @@
                 android:text="@string/addBookmarkMenuTitle" />
 
             <TextView
+                android:id="@+id/sharePageMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:enabled="false"
+                android:text="@string/shareMenuTitle" />
+
+            <TextView
                 android:id="@+id/findInPageMenuItem"
                 style="@style/BrowserTextMenuItem"
                 android:enabled="false"
