--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="charcoal">#2f3135</color>
     <color name="charcoalGray">#47494c</color>
     <color name="slateGray">#5e6168</color>
+    <color name="grayish">#aaaaaa</color>
     <color name="paleBrownishGray">#b0b0b0</color>
     <color name="brownishGray">#5c5c5c</color>
     <color name="coolGray">#969799</color>
