--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -17,10 +17,12 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/tab_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@android:color/white"
+    android:layout_marginEnd="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="10dp"
     android:paddingBottom="16dp"
     android:paddingEnd="20dp"
     android:paddingStart="20dp"
@@ -36,17 +38,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/close"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:contentDescription="@string/closeContentDescription"
+        android:padding="3dp"
+        android:src="@drawable/ic_close_white_24dp"
+        android:tint="@color/grayish"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
         android:fontFamily="sans-serif-medium"
+        android:lines="1"
         android:textColor="@color/midnight"
         android:textIsSelectable="false"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/close"
         app:layout_constraintStart_toEndOf="@id/favicon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Slashdot" />
@@ -55,15 +71,17 @@
         android:id="@+id/url"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="1dp"
         android:layout_marginTop="4dp"
         android:fontFamily="sans-serif"
+        android:lines="1"
         android:textColor="@color/coolGray"
         android:textIsSelectable="false"
         android:textSize="12sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/close"
         app:layout_constraintStart_toEndOf="@id/favicon"
         app:layout_constraintTop_toBottomOf="@id/title"
         tools:text="https://m.slashdot.org" />
