--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -40,10 +40,10 @@
 
     <ImageView
         android:id="@+id/close"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
         android:contentDescription="@string/closeContentDescription"
-        android:padding="3dp"
+        android:scaleType="center"
         android:src="@drawable/ic_close_white_24dp"
         android:tint="@color/grayish"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +72,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:fontFamily="sans-serif"
         android:lines="1"
