--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -27,7 +27,7 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/rootView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent">
 
         <android.support.constraint.ConstraintLayout
