--- a/app/src/main/res/drawable/ic_add_white_30dp.xml
+++ b/app/src/main/res/drawable/ic_add_white_30dp.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<!--
   ~ Copyright (c) 2018 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,19 +14,12 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/fire"
-        android:icon="@drawable/icon_fire"
-        android:title="@string/fireMenu"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/newTab"
-        android:icon="@drawable/ic_add_white_30dp"
-        android:title="@string/newTabMenuItem"
-        app:showAsAction="ifRoom" />
-
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="30dp"
+        android:height="30dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FFF"
+        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+</vector>
