--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -80,12 +80,29 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
+                        <ImageButton
+                            android:id="@+id/privacyGradeButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:src="@drawable/privacygrade_icon_unknown"
+                            android:paddingStart="8dp"
+                            android:paddingTop="8dp"
+                            android:paddingBottom="8dp"
+                            android:paddingEnd="4dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <com.duckduckgo.app.browser.omnibar.KeyboardAwareEditText
                             android:id="@+id/omnibarTextInput"
                             style="@style/Base.V7.Widget.AppCompat.EditText"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="8dp"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginStart="8dp"
                             android:background="@drawable/search_background"
                             android:elevation="4dp"
                             android:fontFamily="sans-serif-medium"
@@ -94,17 +111,19 @@
                             android:inputType="textUri|textNoSuggestions"
                             android:maxLines="1"
                             android:paddingBottom="4dp"
-                            android:paddingEnd="40dp"
+                            android:paddingEnd="10dp"
                             android:paddingStart="10dp"
                             android:paddingTop="4dp"
                             android:selectAllOnFocus="true"
                             android:textColor="@color/white"
                             android:textSize="13sp"
                             android:textStyle="normal"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            tools:text="https://duckduckgo.com/?q=henr..https://duckduckgo.com/?q=henr.." />
-
+                            app:layout_constraintStart_toEndOf="@id/privacyGradeButton"
+                            tools:text="https://duckduckgo.com/?q=example" />
+                        
                         <ImageView
                             android:id="@+id/clearOmnibarInputButton"
                             android:layout_width="24dp"
