--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -18,17 +18,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/privacyDashboard"
-        android:icon="@drawable/privacygrade_icon_unknown"
-        android:title="@string/privacyDashboard"
-        android:visible="false"
+        android:id="@+id/tabsMenuItem"
+        android:icon="@drawable/ic_tabs_24px"
+        android:title="@string/tabsMenuItem"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/fire"
         android:icon="@drawable/icon_fire"
         android:title="@string/fireMenu"
-        android:visible="false"
         app:showAsAction="ifRoom" />
 
     <item
