Change from "done" to "go" button.
IME specific; don't expect all keyboards to honor it. Google's own GBoard displays it as an -> arrow now.

--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -90,7 +90,7 @@
                             android:elevation="4dp"
                             android:fontFamily="sans-serif-medium"
                             android:hint="@string/omnibarInputHint"
-                            android:imeOptions="flagNoExtractUi|actionDone|flagNoPersonalizedLearning"
+                            android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
                             android:inputType="textUri|textNoSuggestions"
                             android:maxLines="1"
                             android:paddingBottom="4dp"
