--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -18,20 +18,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/tabsMenuItem"
-        android:icon="@drawable/ic_tabs_24px"
+        android:id="@+id/tabs"
+        android:icon="@drawable/ic_tabs_gray_24dp"
         android:title="@string/tabsMenuItem"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/fire"
-        android:icon="@drawable/icon_fire"
+        android:icon="@drawable/ic_fire_gray_24dp"
         android:title="@string/fireMenu"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/browserPopup"
-        android:icon="@drawable/ic_overflow_24px"
+        android:icon="@drawable/ic_overflow_gray_24dp"
         android:title="@string/browserPopupMenu"
         app:showAsAction="ifRoom" />
 
