--- a/app/src/main/res/layout/content_privacy_practices.xml
+++ b/app/src/main/res/layout/content_privacy_practices.xml
@@ -56,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
-                    android:textColor="@color/almostBlack"
+                    android:textColor="@color/almostBlackDark"
                     android:textIsSelectable="true"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -96,7 +96,7 @@
                 android:paddingEnd="20dp"
                 android:paddingStart="20dp"
                 android:text="@string/practicesOverview"
-                android:textColor="@color/almostBlack"
+                android:textColor="@color/almostBlackDark"
                 android:textSize="14sp"
                 android:textStyle="normal"
                 app:layout_constraintTop_toBottomOf="@id/practicesBannerContainer" />
@@ -144,7 +144,7 @@
         android:paddingBottom="22dp"
         android:paddingTop="22dp"
         android:text="@string/practicesTosdrLink"
-        android:textColor="@color/almostBlack"
+        android:textColor="@color/almostBlackDark"
         android:textIsSelectable="false"
         android:textSize="14sp"
         android:textStyle="normal"
