--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -70,26 +70,30 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
+                    android:background="@color/colorPrimary"
                     app:contentInsetEnd="0dp"
                     app:contentInsetStart="0dp"
                     app:layout_scrollFlags="scroll|enterAlways"
                     app:popupTheme="@style/AppTheme.PopupOverlay">
 
                     <android.support.constraint.ConstraintLayout
+                        android:id="@+id/omniBarContainer"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@drawable/search_background"
+                        android:layout_margin="8dp"
+                        android:paddingStart="6dp"
+                        android:paddingEnd="6dp">
 
                         <ImageButton
                             android:id="@+id/privacyGradeButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
-                            android:src="@drawable/privacygrade_icon_unknown"
-                            android:paddingStart="8dp"
-                            android:paddingTop="8dp"
-                            android:paddingBottom="8dp"
-                            android:paddingEnd="4dp"
+                            android:src="@drawable/privacygrade_icon_a"
+                            android:padding="3dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginStart="4dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -99,44 +103,38 @@
                             style="@style/Base.V7.Widget.AppCompat.EditText"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginBottom="8dp"
-                            android:layout_marginStart="8dp"
-                            android:background="@drawable/search_background"
-                            android:elevation="4dp"
+                            android:layout_marginEnd="6dp"
+                            android:layout_marginStart="6dp"
+                            android:background="@android:color/transparent"
                             android:fontFamily="sans-serif-medium"
                             android:hint="@string/omnibarInputHint"
                             android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
                             android:inputType="textUri|textNoSuggestions"
                             android:maxLines="1"
-                            android:paddingBottom="4dp"
-                            android:paddingEnd="10dp"
-                            android:paddingStart="10dp"
-                            android:paddingTop="4dp"
                             android:selectAllOnFocus="true"
                             android:textColor="@color/white"
                             android:textSize="13sp"
                             android:textStyle="normal"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/clearTextButton"
                             app:layout_constraintStart_toEndOf="@id/privacyGradeButton"
-                            tools:text="https://duckduckgo.com/?q=example" />
+                            tools:text="https://duckduckgo.com/?q=areallylongexampleexample" />
                         
                         <ImageView
-                            android:id="@+id/clearOmnibarInputButton"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginEnd="6dp"
+                            android:padding="3dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginStart="4dp"
+                            android:id="@+id/clearTextButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:background="?selectableItemBackground"
                             android:contentDescription="@string/clearButtonContentDescription"
-                            android:elevation="6dp"
-                            android:src="@drawable/ic_cancel_24dp"
-                            android:tint="#FFF"
+                            android:src="@drawable/ic_close_white_24dp"
+                            android:tint="@color/grayish"
                             android:visibility="gone"
                             app:layout_constraintBottom_toBottomOf="@id/omnibarTextInput"
-                            app:layout_constraintEnd_toEndOf="@+id/omnibarTextInput"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@id/omnibarTextInput"
                             tools:visibility="visible" />
 
@@ -176,7 +174,7 @@
             android:id="@+id/autoCompleteSuggestionsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/charcoalGray"
+            android:background="@color/colorPrimary"
             android:clipToPadding="false"
             android:paddingBottom="14dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -194,7 +192,7 @@
         android:id="@+id/webViewFullScreenContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#000"
+        android:background="@color/windowBackground"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
