--- a/app/src/main/res/layout/include_privacy_dashboard_header.xml
+++ b/app/src/main/res/layout/include_privacy_dashboard_header.xml
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:textColor="@color/almostBlack"
+        android:textColor="@color/almostBlackDark"
         android:textIsSelectable="true"
         android:textSize="20sp"
         android:textStyle="bold"
