--- a/app/src/main/res/layout/item_tracker_network_header.xml
+++ b/app/src/main/res/layout/item_tracker_network_header.xml
@@ -33,7 +33,7 @@
         android:fontFamily="sans-serif"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="6sp"
-        android:textColor="@color/almostBlack"
+        android:textColor="@color/almostBlackDark"
         android:textIsSelectable="true"
         android:textSize="16sp"
         android:textStyle="bold"
