--- a/app/src/main/res/layout/content_tab_switcher.xml
+++ b/app/src/main/res/layout/content_tab_switcher.xml
@@ -28,19 +28,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/fireText"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tabsRecycler"
         android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:lineSpacingExtra="2sp"
-        android:textColor="@color/coolGray"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        tools:text="@string/tapFireToForget" />
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="@string/tap"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+
+        <ImageView
+            android:layout_width="13dp"
+            android:layout_height="17dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginStart="6dp"
+            android:src="@drawable/ic_fire_gray_24dp"
+            android:tint="@color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="@string/toForget"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
 
 </RelativeLayout>
