--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -87,6 +87,7 @@
 
                         <ImageButton
                             android:id="@+id/privacyGradeButton"
+                            android:contentDescription="@string/privacyGradeContentDescription"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
